Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,31 +4,44 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Wpfsharp.Globalizer by rhyous</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/rhyous/WPFSharp.Globalizer">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/rhyous/WPFSharp.Globalizer/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/rhyous/WPFSharp.Globalizer/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header>
-        <h1>Wpfsharp.Globalizer</h1>
-        <p>Better globalization, both localization and styles, for WPF projects</p>
 
-        <p class="view"><a href="https://github.com/rhyous/WPFSharp.Globalizer">View the Project on GitHub <small>rhyous/WPFSharp.Globalizer</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/rhyous/WPFSharp.Globalizer/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/rhyous/WPFSharp.Globalizer/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/rhyous/WPFSharp.Globalizer">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
       <section>
-        <p>A library for runtime localization of WPF. This project decouples localization from build as well as providing the technology to change the language at runtime, including the ability to apply a separate style for any given language.</p>
+        <div id="title">
+          <h1>Wpfsharp.Globalizer</h1>
+          <p>Better globalization, both localization and styles, for WPF projects</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/rhyous">rhyous</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
+        <h1>
+<a id="wpf-runtime-localization-and-styling" class="anchor" href="#wpf-runtime-localization-and-styling" aria-hidden="true"><span class="octicon octicon-link"></span></a>WPF Runtime Localization and Styling</h1>
+
+<p>A library for runtime localization of WPF. This project decouples localization from build as well as providing the technology to change the language at runtime, including the ability to apply a separate style for any given language.</p>
 
 <p>Use XAML Resource files that can be easily updated with any text editor. Never include localization in your code freeze again.</p>
 
@@ -48,12 +61,9 @@
 <p>(Note: I have no idea how accurate the words are. I just used Google to translate)
 <img src="https://github.com/rhyous/WPFSharp.Globalizer/blob/master/Documentation/Images/WPF%20Globalization%20Example%20Hebrew.png?raw=true" alt=""></p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/rhyous">rhyous</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
